# game_bot

./: .gitignore  INFO  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.py
.github/workflows/: checks.yaml
src/: bot.py  dungeon_new.py  enemy.py  game.py  helpers.py  initial_settings.py  main.py  person_chat.py  person_location.py  player.py
src/bots/: __init__.py  bot_names.py  bot_type.py
src/buffs/: __init__.py  buffs_name.py
src/config/: __init__.py  config_heal.py  config_hits.py  config_potion.py  config_scroll.py  config_search.py  local_config.py  pattern.py  potions_name.py  url_encode.py  urls.py  variable_names.py
src/elixir/: __init__.py  elixir.py
src/fight/: config_fight.py  fight.py
src/fight/settings/: fight_config_leader_mag.json  fight_config_leader_warrior.json  fight_config_mag.json  fight_config_slave.json  fight_config_solo.json  fight_config_solo_warrior.json  hit_dict.json  hit_dict_new.json
src/heal/: healing_potion_name.py
src/location/: __init__.py  classes.py
src/my_errors/: __init__.py  error.py
src/request/: __init__.py  request_to_nl.py
src/schemas/: __init__.py  data_schema.py
tests/: conftest.py  os_env_fixture.py  test_request.py
tests/request/: test_send_telegram_message.py
