[tool.poetry]
name = "nl-bait"
version = "0.1.0"
description = ""
authors = ["Anton Zimin <zimkaa87@gmail.com>"]
readme = "README.md"
packages = [{include = "nl_bait"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.0"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
pandas = "^2.0.0"
pydantic = "^1.10.7"
sentry-sdk = "^1.20.0"
docopt = "^0.6.2"
validators = "^0.20.0"
langid = "^1.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.13.4"
black = {version = "^22.3.0", allow-prereleases = true}
mypy = "^0.961"
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.23"
flake8-builtins = "^2.1.0"
pep8-naming = "^0.13.3"
flake8-variables-names = "^0.0.5"
flake8-pyproject = "^1.2.3"
flake8-import-order = "^0.18.2"

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = [
    "tests",
]

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    "env",
    "venv",
    ".venv",
    ".env",
    ".python-version",
]
max-complexity = 8
extend-ignore = ["I202"]
per-file-ignores = [
    "*/__init__.py:F401",
    "src/initial_settings.py:I100,I201",
]

[tool.mypy]
ignore_missing_imports = true
